# learn-german

./: .gitignore  AGENTS.md  CLAUDE.md  LEARNING-GUIDE.md  README.md  run-dev.ps1  run-dev.sh  setup.bat  setup.ps1  setup.sh
backend/: .env  .env.example  README.md  _diag_gen.py  _diag_staged.py  _gruut_probe.py  main.py  pyproject.toml
backend/scripts/: daily_article.py
backend/src/sprachheft/: __init__.py  config.py  db.py  languages.py  models.py  schemas.py  seed.py
backend/src/sprachheft/agents/: composer.py  conjugation.py  feedback.py  generator.py  importer.py  rewriter.py  tutor.py
backend/src/sprachheft/api/: app.py  conjugation.py  course.py  deps.py  dictionary.py  exercises.py  imports.py  ingest.py  languages.py  materials.py  news.py  practice.py  pronunciation.py  reference.py  review.py  tutor.py  vocab.py
backend/src/sprachheft/dictionary/: __init__.py  lemmatize.py  loader.py  service.py
backend/src/sprachheft/embeddings/: __init__.py
backend/src/sprachheft/ingest/: __init__.py  base.py  link.py  manual.py
backend/src/sprachheft/llm/: __init__.py  base.py  client.py  factory.py  fake.py
backend/src/sprachheft/news/: __init__.py  service.py  sources.py
backend/src/sprachheft/phonetics/: __init__.py  tts.py
backend/tests/: conftest.py  test_conjugation.py  test_course.py  test_dictionary.py  test_generation.py  test_imports.py  test_ingest.py  test_languages.py  test_new_features.py  test_news.py  test_phonetics.py  test_practice.py  test_pronunciation.py  test_review.py  test_rewrite.py  test_smoke.py  test_tutor.py  test_vocab.py
(+63 files in other folders)
