[project]
name = "sprachheft"
version = "0.1.0"
description = "Sprachheft — a German learning notebook: media-driven vocabulary, exercises, spaced review, and an offline dictionary."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "fsrs>=4.0.0",
    "simplemma>=1.1.1",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.44",
    "instructor>=1.5",
]
transcribe = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
]
embeddings = [
    "fastembed>=0.4.0",
]
phonetics = [
    "phonemizer>=3.2",
    "espeakng-loader>=0.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sprachheft"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in argument defaults
